--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,34 @@
-.App {
-  text-align: center;
+@font-face {
+  font-family: 'GongGothicMedium';
+  src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_20-10@1.0/GongGothicMedium.woff') format('woff');
+  font-weight: normal;
+  font-style: normal;
+}
+* {
+    font-family: 'GongGothicMedium';
+}
+::-webkit-scrollbar {
+  width:10px;
+}
+::-webkit-scrollbar-track{
+  background:#fff;
+}
+::-webkit-scrollbar-thumb{
+  background:#000;
+  border-radius: 50px;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
+/* .gra{
+  background: linear-gradient(0deg, rgba(253,198,213,1) 0%, rgba(167,194,247,1));
+  position: absolute;
+  height: 88%;
+  width: 100%;
+  margin-top: 7vh;
+}*/
+.grad{
+  background: linear-gradient(0deg, rgba(253,198,213,1) 0%, rgba(167,194,247,1));
+  position: absolute;
+  height: 89%;
+  width: 100%;
+  margin-top: 6vh;
+} 
