SubMate Update 1.1.0 Board_Reedem

--- a/src/App.css
+++ b/src/App.css
@@ -8,13 +8,13 @@
     font-family: 'GongGothicMedium';
 }
 ::-webkit-scrollbar {
-  width:10px;
+  width:3px;
 }
 ::-webkit-scrollbar-track{
   background:#fff;
 }
 ::-webkit-scrollbar-thumb{
-  background:#000;
+  background:#e4e4e4;
   border-radius: 50px;
 }
 
